release: Toolstead platform foundation v0.4
